--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,11 @@
 # ASP.NET
+- task: AzureRmWebAppDeployment@4
+  inputs:
+    ConnectionType: 'AzureRM'
+    azureSubscription: 'Microsoft Azure Internal Consumption(70e57b68-8c63-4560-b97f-bf013da22a65)'
+    appType: 'webApp'
+    WebAppName: 'aspnetwebproject'
+    packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
 - task: AzureAppServiceSettings@1
   inputs:
     azureSubscription: 'Microsoft Azure Internal Consumption(70e57b68-8c63-4560-b97f-bf013da22a65)'
